# openconnect-sso

./: PKGBUILD  README.md  pyproject.toml
src/openconnect_sso/: authenticator.py
