[project]
name = "openconnect-sso"
version = "0.8.2"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
readme = "README.md"
authors = [
    { name = "László Vaskó", email = "laszlo.vasko@outlook.com" },
    { name = "Simon Bachenberg", email = "simon.bachenberg@dw.com" }
]
requires-python = ">=3.8"
license = "GPL-3.0-only"
keywords = ["networking", "vpn", "saml", "azure-ad"]
homepage = "https://github.com/BachenbergS/openconnect-sso"
repository = "https://github.com/BachenbergS/openconnect-sso"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking"
]
dependencies = [
    "attrs>=18.2",
    "colorama>=0.4",
    "importlib-metadata>=5.1.0; python_version<'3.8'",
    "importlib-resources>=6.4.0; python_version<'3.8'",
    "lxml",
    "keyring>=21.1,<25.0.0",
    "prompt-toolkit>=3.0.3",
    "pyxdg>=0.26,<0.29",
    "requests>=2.22",
    "structlog>=20.1",
    "toml>=0.10",
    "setuptools>40.0",
    "PySocks>=1.7.1",
    "PyQt6>=6.3.0",
    "PyQt6-WebEngine>=6.3.0",
    "pyotp>=2.7.0"
]

[project.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

